fixed social media icons flickering on hover

--- a/src/components/Navbar/index.module.css
+++ b/src/components/Navbar/index.module.css
@@ -17,7 +17,8 @@
   font-size: 28px;
   margin-left: 16px;
   color: #2c3e56;
-  transition: all 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
 }
 
 .socialMedia:hover {
